# papyrus

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cache.rs  citation_graph.rs  config.rs  db.rs  dedup.rs  download.rs  error.rs  export.rs  filters.rs  lib.rs  library.rs  main.rs  mcp.rs  models.rs  plugin.rs  ratelimit.rs  similarity.rs  watch.rs
src/scraper/: arxiv.rs  crossref.rs  mod.rs  pubmed.rs  semantic_scholar.rs
src/ui/: detail_panel.rs  filter_bar.rs  input_modal.rs  layout.rs  mod.rs  results_panel.rs  status_bar.rs
tests/: citation_graph_tests.rs  db_tests.rs  dedup_tests.rs  download_tests.rs  filter_tests.rs  plugin_tests.rs  similarity_tests.rs  watch_tests.rs
