[package]
name = "papyrus"
version = "1.0.0"
edition = "2021"
description = "Terminal research paper scraper with citation graph, local library, and MCP server"
license = "MIT"

[[bin]]
name = "papyrus"
path = "src/main.rs"

[lib]
name = "papyrus_lib"
path = "src/lib.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.36", features = ["async-tokio"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
arboard = "3"
open = "5"
fuzzy-matcher = "0.3"
csv = "1.3"
async-trait = "0.1"
governor = "0.6"
sha2 = "0.10"
flate2 = "1"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = { version = "1", features = ["chrono04"] }
rusqlite = { version = "0.32", features = ["bundled"] }
unicode-normalization = "0.1"
strsim = "0.11"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
